skin/frontend/default/default/css/boxes.css
/* ... */
.multi-address-checkout-box .count-head h4 {  margin:0; }
.multi-address-checkout-box .head h5 { color:#E26703; }
.multi-address-checkout-box .head a { font-weight:normal;}
.multi-address-checkout-box .checkmo-mailing-address { display: block; padding-left: 20px; }
.shipping-method-pointer { border:1px solid #d9d2be; padding:13px; background:#F9F3E3; position:relative; }
.shipping-method-pointer .pointer { position:absolute; top:-20px; right:-40px; }
.place-order-box { float:right; height:71px; overflow:hidden; }
.place-order-box .left-radius { width:21px; background:url(../images/place_order_container_bg.gif) no-repeat; }
.place-order-box .main-radius{ background:url(../images/place_order_bg.gif) no-repeat 100% 0; padding-right:21px; vertical-align:middle; }
.place-order-box .grand-total { font-size:1.5em; }
.place-order-box .grand-total .price { color:#e26703; font-weight:bold; }
.place-order-box input { margin-left:15px; }

/********************** Gift Messages */
.giftmessages .gift-header {
    font-size: 12px;
    font-weight: bold;
    color: #e87403;
}

.giftmessages .input-checkbox {
    padding-bottom: 15px;
}

.giftmessages textarea {
    height: 100px;
}

.giftmessages .input-checkbox input {
    margin-right: 5px;
}

.giftmessages .input-checkbox label {
    font-weight:normal;
    color: #8e8d8b;
}

.one-page-checkout .box-no-padding {
    border:1px solid #bbb6a5;
    border-top:0;
    padding:15px 0px;
    background:#faf7ee;
}

.one-page-checkout .box-no-padding .inner-box {
   padding:0px 20px;
}


.giftmessages .gift-box {
    background-color:#f6f1eb;
    border-top: 1px solid #e9e4de;
    border-bottom: 1px solid #e9e4de;
    padding: 22px 16px 22px 22px;
}

.giftmessages .gift-box .scroll-box
{
    overflow: auto;
    height: 500px;
}

.giftmessages .product-image
{
    border: 1px solid #d2d1cd;
}

.no-border {
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: none;
}

.no-padding {
    padding: 0 0 0 0;
}

.giftmessages .giftmessage-product-info {
    padding-left: 10px;
}

.giftmessages .numeration
{
    font-weight: bold;
    color: #8a8987;
}

.giftmessages .gift-box label { color: #918d8e; }

.giftmessages .group-select li .input-box { float:left; width:260px; }
.giftmessages .group-select li .input-text, .group-select li select, .group-select li textarea { width:495px; }
.giftmessages .group-select li .input-box .input-text, .group-select li .input-box textarea { width:235px; }
.giftmessages .group-select li .input-box select { width:256px;}

/********************** Customer */

/* My Account navigation */
.account-nav { border:1px solid #bbb; }
.account-nav .head {
   margin:0;
   background:url(../images/account_nav_head_bg.gif) repeat-x 0 100% #fc9d36;
   padding:3px 10px;
    }
.account-nav .head h3 { color:#fff; font-size:1.1em; }
.account-nav ul { background:#fbfaf6; padding:4px 10px 10px 10px; }
.account-nav li a, .account-nav li.on { padding:3px 0;  }
.account-nav li a { display:block; border-bottom:1px solid #ddd; /*background:url(../images/account_nav_link_bg.gif) no-repeat 10px 8px;*/ }
.account-nav li a, .account-nav li a:hover { color:#5f5d5c; text-decoration:none; }
.account-nav li a:hover { color:#ea7900; }
.account-nav li.on { border-bottom:1px solid #ddd; /* background:url(../images/account_nav_on_bg.gif) no-repeat 10px 8px;*/  color:#ea7900; font-weight:bold; }
.account-nav li.on a { padding:0; }
.account-nav li.last, .account-nav li.last a { border-bottom:0; }


/* Login */
.login-box .col-1, .login-box .col-2 { border:1px solid #bbb6a5; background:#dee5e8; }
.login-box .content { background:url(../images/login_box_bg.gif) repeat-x #faf7ee; padding:14px 21px; }
.login-box h4 {
    min-height:16px;
    border-bottom:1px solid #ddd;
    margin-bottom:1.2em;
    padding-bottom:5px;
    padding-left:23px;
    background-position:0 1px;
    background-repeat:no-repeat;
    font-size:1.05em;
    color:#e76200;
    text-transform:uppercase;
    }
.login-box .new-users h4 { background-image:url(../images/icon_page_white.gif); }
.login-box .registered-users h4 { background-image:url(../images/icon_page_white_text.gif); }
.login-box .button-set { margin:0; border:none; background:url(../images/login_box_form_buttons_bg.gif) repeat-x; padding:8px 13px; }
.login-box .content { min-height:230px; }


/* Dashboard */.account-box {
    margin-bottom:20px;
    border:1px solid #ccc;
    border-right-color:#999;
    border-bottom-color:#999;
    background:url(../images/account_box_bg.gif) repeat-x #fff;
    padding:15px;
    }
.account-box .head { margin-bottom:10px; border-bottom:1px solid #d9dde3; }
.account-box h4 { color:#E65505; font-size:1.1em; text-transform:uppercase; }
.account-box .inner-head { margin-bottom:8px; background:url(../images/dotted_divider.gif) repeat-x 0 100%; padding-bottom:2px; text-align:right; }
.account-box h5 { font-size:1.1em;   }
.account-box h5 a { font-weight:normal; }
.account-box h6 { text-transform:uppercase; }
.account-main .account-box li { padding:5px 0; }
.account-box ol .count {
    float:left;
    margin-top:3px;
    background-color:#0a263c;
    padding:1px 3px;
    font-size:9px;
    font-weight:bold;
    color:#fff;
    line-height:1em;
    }
.account-box ol .content { margin-left:20px; padding:0; }
.account-box ol.recent-reviews small {
    float:left;
    margin-right:3px;
    font-weight:bold;
    }
.account-box .product-images { width:65px; }
.account-box .product-images img { border:1px solid #ccc;}
.account-box .product-details { margin:0 0 10px 70px; }
.account-box .content { padding:0; }
.account-side .actions { border-top:1px solid #ccc; padding-top:4px; }
.account-side .actions .form-button { float:right; }
.edit-password { display:block; height:20px; background:url(../images/icon_lock.gif) no-repeat 0 2px; padding-left:20px; }
.dashboard-welcome { margin-right:8em; margin-bottom:1.5em; font-size:1.1em; }
/* ... */

